client-app/common-core/objects/Opportunity/fields/FLD_SAP_CreditMemo_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_CreditMemo_Number__c</fullName>
    <label>SAP Credit Memo Number</label>
    <description>SAP Credit Memo Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>