client-app/common-core/objects/Opportunity/fields/FLD_SAP_ReturnOrder_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_ReturnOrder_Number__c</fullName>
    <label>SAP Return Order Number</label>
    <description>SAP Return Order Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>